--- a/MachineTestFrondend/productproject/src/Product/ProductForm.css
+++ b/MachineTestFrondend/productproject/src/Product/ProductForm.css
@@ -35,7 +35,7 @@ form label {
   font-weight: bold;
 }
 
-form input {
+form input,select {
   padding: 0.5rem;
   margin-bottom: 1rem;
   border: 1px solid #ccc;
